Included App_Plugins in .sln Signed-off-by: liam.mcdermott <liam.mcdermott@connectinternetsolutions.com>

--- a/StartMeUp/StartMeUp/App_Plugins/TheDashboard/TheDevDashboard.html
+++ b/StartMeUp/StartMeUp/App_Plugins/TheDashboard/TheDevDashboard.html
@@ -1,7 +1,7 @@
 ﻿<div class="row" ng-controller="TheDevDashboard.Controller">
 
     <div class="span6">
-        <h3>Hijacked routes</h3>
+        <h3>Hijacked routes:</h3>
         <p>Shows document types associated with custom controllers.</p>
         <div ng-repeat="item in vm.hijackedRoutes" class="logitem">
             <div>
